[package]
name = "test-command"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc="*"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"
tree-sitter = "0.24"
tree-sitter-go = "0.23.4"
tree-sitter-rust = "0.23"
